Added boolean attribute type